<resources>
    <string name="app_name">My Application</string>
    <string name="my_devices">我的设备</string>
    <string name="guide">指南</string>
    <string name="devices">设备</string>
    <string name="setting">设置</string>
    <string name="chinese">简体中文</string>
    <string name="english">English</string>
    <string name="select_language">选择语言</string>
    <string name="direction">方向</string>
    <string name="color">颜色</string>
    <string name="music">音乐</string>
</resources>
