<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f6fc"
    android:orientation="vertical">

    <include layout="@layout/action_bar_title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@mipmap/ic_bluetooth_head" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_direction"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_direction_selector"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/direction" />
        <TextView
            android:id="@+id/tv_color"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_direction_selector"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/color" />
        <TextView
            android:id="@+id/tv_music"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_direction_selector"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/music" />
    </LinearLayout>

</LinearLayout>